# SIMUROSOT-AIR

./: Air-sim  README.md  model.json
ardrone_fira/: CMakeLists.txt  README.md  manifest.xml  package.xml
ardrone_fira/launch/: ardrone_fira.launch
ardrone_fira/src/: auto_driver.py  drive_demo.py  drone_controller.py
ardrone_simulator/: LICENSE  README.md
ardrone_simulator/ardrone_simulator/: CMakeLists.txt  package.xml
ardrone_simulator/cvg_sim_gazebo/: package.xml
ardrone_simulator/cvg_sim_gazebo/launch/: ardrone_testworld.launch  empty_world.launch  spawn_quadrotor.launch~
ardrone_simulator/cvg_sim_gazebo/models/end/: model.config  model.sdf~
ardrone_simulator/cvg_sim_gazebo/models/home/: model.config  model.config~  model.sdf~
ardrone_simulator/cvg_sim_gazebo/models/house/: model.config  model.sdf
ardrone_simulator/cvg_sim_gazebo/models/qr_code/: model.config  model.sdf
ardrone_simulator/cvg_sim_gazebo/models/qr_e/: model.config  model.sdf  model.sdf~
ardrone_simulator/cvg_sim_gazebo/models/qr_n/: model.sdf  model.sdf~
ardrone_simulator/cvg_sim_gazebo/models/qr_s/: model.config  model.config~  model.sdf  model.sdf~
ardrone_simulator/cvg_sim_gazebo/models/qr_w/: model.config  model.sdf  model.sdf~
ardrone_simulator/cvg_sim_gazebo/urdf/: quadrotor_sensors.urdf.xacro~
ardrone_simulator/cvg_sim_gazebo/worlds/: road.config  road.config~  road.world~
ardrone_simulator/cvg_sim_gazebo_plugins/: CMakeLists.txt  CMakeLists.txt~
ardrone_simulator/cvg_sim_gazebo_plugins/src/: factory.cc  factory.cc~
(+27 files in other folders)
